fix: detach post tags when mapping to DTO